Adjusted Questions to ask in accelerator to ask for package name

--- a/accelerator.yaml
+++ b/accelerator.yaml
@@ -6,16 +6,11 @@ accelerator:
     - golang    
     - convention
   options:
-    - name: petKind
-      label: "Kind"
+    - name: packageName
+      label: "Package Name"
       display: true
-      defaultValue: Snake
+      defaultValue: convention-server.vmware.com
       required: true    
-    - name: imageRegistry
-      label: Image registry
-      description: the image registry 
-      dataType: string
-      defaultValue: akseutap2registry.azurecr.io
 engine:
   merge:   
     - include: ["config/**", "README.md","git-push.sh","Tiltfile","**/*.go","go.mod","go.sum",".tanzuignore","catalog-info.yaml"]
