--- a/carvel/package-build.yml
+++ b/carvel/package-build.yml
@@ -2,7 +2,7 @@ apiVersion: kctrl.carvel.dev/v1alpha1
 kind: PackageBuild
 metadata:
   creationTimestamp: null
-  name: multi-purpose-convention-server.conventions.tanzu.vmware.com
+  name: PACKAGE_NAME_PLACEHOLDER
 spec:
   release:
   - resource: {}
@@ -19,7 +19,7 @@ spec:
           - kbld: {}
       export:
       - imgpkgBundle:
-          image: harbor-repo.vmware.com/tanzu_practice/conventions/multi-purpose-convention-server
+          image: CONVENTION_IMAGE_REGISTRY_PLACEHOLDER_URL
           useKbldImagesLock: true
         includePaths:
         - config
