--- a/carvel/packagerepository/pkgrepo-build.yml
+++ b/carvel/packagerepository/pkgrepo-build.yml
@@ -2,8 +2,8 @@ apiVersion: kctrl.carvel.dev/v1alpha1
 kind: PackageRepositoryBuild
 metadata:
   creationTimestamp: null
-  name: multi-purpose-convention-server-repo.conventions.tanzu.vmware.com
+  name: PACKAGE_SHORT_NAME_PLACEHOLDER-repo.PACKAGE_SUFFIX_PLACEHOLDER
 spec:
   export:
     imgpkgBundle:
-      image: harbor-repo.vmware.com/tanzu_practice/conventions/multi-purpose-convention-server-bundle-repo
+      image: STAGING_PACKAGE_IMAGE_REGISTRY_PLACEHOLDER_URL
