add package repository pruning - keep latest 5

--- a/accelerator.yaml
+++ b/accelerator.yaml
@@ -73,6 +73,7 @@ engine:
                 "install-server/**",
                 "carvel/**",
                 "examples/**",
+                "scripts/**",
                 ".gitignore"
     ]
       chain:
